Perma Tier 2 Assertion failure: false, at /builds/worker/checkouts/gecko/dom/canvas/TexUnpackBlob.cpp:369
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jgilbert)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression, Whiteboard: [stockwell needswork:owner])
Crash Data
Attachments
(1 file)
Filed by: btara [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=326692354&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/CD8RXlWrQYKySrS9n2Jk2A/runs/0/artifacts/public/logs/live_backing.log
[task 2021-01-14T15:07:43.849Z] 15:07:15 INFO - 739 INFO TEST-START | dom/canvas/test/webgl-mochitest/test_video_fastpath_mp4.html
[task 2021-01-14T15:07:43.849Z] 15:07:37 INFO - wait for org.mozilla.geckoview.test complete; top activity=com.bitbar.testdroid.monitor
[task 2021-01-14T15:07:43.849Z] 15:07:38 INFO - remoteautomation.py | Application ran for: 0:00:56.001259
[task 2021-01-14T15:07:43.849Z] 15:07:39 INFO - mozcrash Copy/paste: /builds/task_161063619339838/fetches/minidump_stackwalk/minidump_stackwalk /tmp/tmpbm9xby/04a08a73-c19b-2fef-488d-b464cda21536.dmp /builds/task_161063619339838/workspace/build/symbols
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - mozcrash Saved minidump as /builds/task_161063619339838/workspace/build/blobber_upload_dir/04a08a73-c19b-2fef-488d-b464cda21536.dmp
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - mozcrash Saved app info as /builds/task_161063619339838/workspace/build/blobber_upload_dir/04a08a73-c19b-2fef-488d-b464cda21536.extra
[task 2021-01-14T15:07:43.849Z] 15:07:43 WARNING - PROCESS-CRASH | dom/canvas/test/webgl-mochitest/test_video_fastpath_mp4.html | application crashed [@ mozilla::webgl::TexUnpackBlob::Create(mozilla::webgl::TexUnpackBlobDesc const&)]
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Mozilla crash reason: MOZ_ASSERT(false)
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Crash dump filename: /tmp/tmpbm9xby/04a08a73-c19b-2fef-488d-b464cda21536.dmp
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Operating system: Android
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 0.0.0 Linux 4.4.56-g594d847d09a1 #1 SMP PREEMPT Thu Oct 26 22:34:08 UTC 2017 aarch64
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - CPU: arm64
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 8 CPUs
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - GPU: UNKNOWN
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Crash address: 0x0
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Process uptime: not available
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Thread 11 (crashed)
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 0 libxul.so!mozilla::webgl::TexUnpackBlob::Create(mozilla::webgl::TexUnpackBlobDesc const&) [TexUnpackBlob.cpp:4cff94ca98189769f21a855520a345c6c4e5c841 : 344 + 0x13c]
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x0 = 0x0000000000000005 x1 = 0x00000075c8e04fa0
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x2 = 0x0000000000000004 x3 = 0x0000000000000003
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x4 = 0x0000000000000000 x5 = 0x4f4dffffffffffff
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x6 = 0x0000000000000000 x7 = 0x8000000000000000
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x8 = 0x0000000000000000 x9 = 0x00000075c84fcd80
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x10 = 0x00000075c3ff6569 x11 = 0x000000000000006a
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x12 = 0x00000075c8e05278 x13 = 0x0000000000000000
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x14 = 0xffffffffffffffff x15 = 0x0035a93d0b29640c
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x16 = 0x00000075e0163cd0 x17 = 0x00000075dfe83268
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x18 = 0x0000000000000000 x19 = 0x0000000000000171
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x20 = 0x00000075c8e06c40 x21 = 0x00000075c8e072b8
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x22 = 0x00000075c8e0a588 x23 = 0x00000075c8e06c00
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x24 = 0x00000075c8e06c40 x25 = 0x00000075c8e06f90
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x26 = 0x00000075c8e06dd0 x27 = 0x00000075c8e0a588
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x28 = 0x00000075c8e0a588 fp = 0x00000075c8e06980
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - lr = 0x00000075bfdd6314 sp = 0x00000075c8e06970
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - pc = 0x00000075bfdd632c
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Found by: given as instruction pointer in context
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 1 libxul.so!mozilla::WebGLTexture::TexImage(unsigned int, unsigned int, mozilla::avec3<unsigned int> const&, mozilla::webgl::PackingInfo const&, mozilla::webgl::TexUnpackBlobDesc const&) [WebGLTextureUpload.cpp:4cff94ca98189769f21a855520a345c6c4e5c841 : 919 + 0x0]
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x19 = 0x00000075c8e06ff8 x20 = 0x0000007532512000
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x21 = 0x00000075c8e072b8 x22 = 0x0000000000000000
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x23 = 0x00000075c8e06c00 x24 = 0x00000075c8e06c40
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x25 = 0x00000075c8e06f90 x26 = 0x00000075c8e06dd0
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - x27 = 0x00000075c8e0a588 x28 = 0x00000075c8e0a588
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - fp = 0x00000075c8e06d70 sp = 0x00000075c8e069b0
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - pc = 0x00000075bfe4e978
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Found by: call frame info
...
...
...
[task 2021-01-14T15:07:53.552Z] 15:07:53 INFO - 01-14 15:07:14.856 W/GrallocMapperPassthrough(10453): buffer descriptor with invalid usage bits 0x2000
[task 2021-01-14T15:07:53.552Z] 15:07:53 INFO - 01-14 15:07:14.861 D/GeckoViewContent[C](10500): handleEvent: pageshow
[task 2021-01-14T15:07:53.552Z] 15:07:53 INFO - 01-14 15:07:14.862 D/GeckoViewAutofill[C](10500): handleEvent: pageshow
[task 2021-01-14T15:07:53.552Z] 15:07:53 INFO - 01-14 15:07:14.863 F/MOZ_Assert(10500): Assertion failure: false, at /builds/worker/checkouts/gecko/dom/canvas/TexUnpackBlob.cpp:369
[task 2021-01-14T15:07:53.553Z] 15:07:53 INFO - 01-14 15:07:14.868 F/MOZ_Assert(10500): #01: ???[/data/app/org.mozilla.geckoview.test-N8xjGofS3ZyOckNKTMt0xw==/lib/arm64/libxul.so +0x3016db8]
...
...
...
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1640607
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
[task 2021-01-14T15:07:43.849Z] 15:07:43 WARNING - PROCESS-CRASH | dom/canvas/test/webgl-mochitest/test_video_fastpath_mp4.html | application crashed [@ mozilla::webgl::TexUnpackBlob::Create(mozilla::webgl::TexUnpackBlobDesc const&)]
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Mozilla crash reason: MOZ_ASSERT(false)
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Crash dump filename: /tmp/tmpbm9xby/04a08a73-c19b-2fef-488d-b464cda21536.dmp
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Operating system: Android
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 0.0.0 Linux 4.4.56-g594d847d09a1 #1 SMP PREEMPT Thu Oct 26 22:34:08 UTC 2017 aarch64
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - CPU: arm64
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 8 CPUs
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - GPU: UNKNOWN
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Crash address: 0x0
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Process uptime: not available
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - Thread 11 (crashed)
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 0 libxul.so!mozilla::webgl::TexUnpackBlob::Create(mozilla::webgl::TexUnpackBlobDesc const&) [TexUnpackBlob.cpp:4cff94ca98189769f21a855520a345c6c4e5c841 : 344 + 0x13c]
[...]
[task 2021-01-14T15:07:43.849Z] 15:07:43 INFO - 1 libxul.so!mozilla::WebGLTexture::TexImage(unsigned int, unsigned int, mozilla::avec3<unsigned int> const&, mozilla::webgl::PackingInfo const&, mozilla::webgl::TexUnpackBlobDesc const&) [WebGLTextureUpload.cpp:4cff94ca98189769f21a855520a345c6c4e5c841 : 919 + 0x0]
TexUnpackBlob.cpp:344:
https://hg.mozilla.org/integration/autoland/file/4cff94ca98189769f21a855520a345c6c4e5c841/dom/canvas/TexUnpackBlob.cpp#l344
341|// static
342|std::unique_ptr<TexUnpackBlob> TexUnpackBlob::Create(
343| const TexUnpackBlobDesc& desc) {
344| return std::unique_ptr<TexUnpackBlob>{[&]() -> TexUnpackBlob* {
345| if (!IsTarget3D(desc.imageTarget) && desc.size.z != 1) {
346| MOZ_ASSERT(false);
347| return nullptr;
348| }
349|
350| switch (desc.unpacking.mUnpackAlignment) {
351| case 1:
352| case 2:
353| case 4:
354| case 8:
355| break;
356| default:
357| MOZ_ASSERT(false);
358| return nullptr;
359| }
360|
361| if (desc.sd) {
362| return new TexUnpackImage(desc);
363| }
364| if (desc.dataSurf) {
365| return new TexUnpackSurface(desc);
366| }
367|
368| if (desc.srcAlphaType != gfxAlphaType::NonPremult) {
369| MOZ_ASSERT(false);
370| return nullptr;
371| }
372| return new TexUnpackBytes(desc);
373| }()};
374|}
Stack 1 is fine though:
https://hg.mozilla.org/integration/autoland/file/4cff94ca98189769f21a855520a345c6c4e5c841/dom/canvas/WebGLTextureUpload.cpp#l919
It's probably just not rewinding into the inner lambda, which is annoying.
| Assignee | ||
Comment 6•5 years ago
|
||
Oh, but the actual assert text has it:
[task 2021-01-14T15:07:53.552Z] 15:07:53 INFO - 01-14 15:07:14.863 F/MOZ_Assert(10500): Assertion failure: false, at /builds/worker/checkouts/gecko/dom/canvas/TexUnpackBlob.cpp:369
| Assignee | ||
Comment 7•5 years ago
|
||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 10•5 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Description
•