Bug 1686750 - Upload zeros if layers::Image => SurfaceDescriptor fails. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D101948